[metadata]
name = arcane_twitter_etl
version = 0.1.0
description = Fetch twits with the arcane hastag
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
author = Antoine Puyo
maintainer = Antoine Puyo
license = MIT
platforms = any
project_urls =
    Source=https://github.com/

[options]
zip_safe = False
packages = find:
package_dir =
    =src/
include_package_data = True
install_requires =
    dynaconf==3.1.2
    tweepy==4.5.0
    google-cloud-bigquery==2.32.0